[gd_scene load_steps=6 format=3 uid="uid://cto6cevkt1kwo"]

[ext_resource type="Script" path="res://SistemaSubidaNivel/BarraDeExperiencia.gd" id="1_0vr83"]
[ext_resource type="PackedScene" uid="uid://pwkqiyuqrbui" path="res://levelUpWindow.tscn" id="1_bld37"]
[ext_resource type="Script" path="res://SistemaSubidaNivel/main.gd" id="1_mqajj"]
[ext_resource type="PackedScene" uid="uid://brdcwgf2o1ttn" path="res://OrbeExperiencia.tscn" id="2_ud8lp"]

[sub_resource type="GDScript" id="GDScript_aqk86"]
script/source = "extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="SistemaSubidaDeNivel" type="Node2D"]
script = ExtResource("1_mqajj")

[node name="GeneradorOrbes" type="Node" parent="."]

[node name="SubidaNivelGui" type="Node" parent="."]

[node name="EstadisticasGui" type="Node" parent="."]

[node name="BarraDeExperiencia" type="ProgressBar" parent="."]
offset_left = 112.0
offset_top = 16.0
offset_right = 464.0
offset_bottom = 44.0
tooltip_text = "Experiencia
"
script = ExtResource("1_0vr83")

[node name="LevelUpWindow" parent="." instance=ExtResource("1_bld37")]

[node name="OrbeExperiencia" parent="." instance=ExtResource("2_ud8lp")]
script = SubResource("GDScript_aqk86")

[connection signal="value_changed" from="BarraDeExperiencia" to="LevelUpWindow" method="_on_barra_de_experiencia_value_changed"]
[connection signal="body_entered" from="OrbeExperiencia" to="." method="_on_orbe_experiencia_body_entered"]
